Fix styling error. The Actionbar component is too wide in comparison to the List component when the view screen is smaller than 500px

--- a/src/components/Actionbar/Actionbar.css
+++ b/src/components/Actionbar/Actionbar.css
@@ -1,5 +1,4 @@
 .Actionbar {
-  width: 80%;
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
